# omw

./: .editorconfig  CMakeLists.txt  README.md
cmake/: FindMathematica.cmake  FindOctave.cmake
docs/: CMakeLists.txt  Doxyfile.in
include/: om_array.h  om_mathematica.h  om_matrix.h  om_octave.h  om_wrapper.h  om_wrapper_base.h  omw.hpp
include/omw/: array.hpp  mathematica.hpp  matrix.hpp  octave.hpp  octavew.hpp  pre.hpp  type_traits.hpp  wrapper_base.hpp
include/omw/mathematica/: array.hpp  matrix.hpp
src/: mathematica.cpp  octave.cpp  octavew.cpp  om_mathematica.cpp  om_octave.cpp  om_wrapper.cpp  om_wrapper_base.cpp  omw_test.cpp  omw_test.tm  wrapper_base.cpp
src/mathematica/: Package.m
src/mathematica/Kernel/: init.m
t/: 10_basic.t  10_bool.t  12_unsigned_int.t  13_float.t  14_string.t  15_param_list.t  TestHelpers.pm
test/: CMakeLists.txt  omw_test.cpp  omw_test.tm
